--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "ASVRigidLink"
 uuid = "8ab9dfdf-d7de-4760-9a81-f2a6fb8e2db1"
-authors = ["Josef Matous <josef.matous@ntnu.no>"]
 version = "0.1.0"
+authors = ["Josef Matous <josef.matous@ntnu.no>"]
 
 [deps]
 ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
@@ -10,6 +10,7 @@ DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
@@ -21,6 +22,7 @@ DifferentialEquations = "7.16.1"
 DocStringExtensions = "0.9.5"
 ForwardDiff = "1.2.1"
 LinearAlgebra = "1.11.0"
+NLopt = "1.2.1"
 Plots = "1.41.1"
 Printf = "1.11.0"
 Revise = "3.9.0"
